--- a/RetrainableDQN.ipynb
+++ b/RetrainableDQN.ipynb
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +636,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2019-02-22 02:05:53,945] Making new env: BreakoutDeterministic-v4\n",
+      "[2019-03-07 23:27:00,056] Making new env: BreakoutDeterministic-v4\n",
       "/Users/george/anaconda3/envs/py36/lib/python3.6/site-packages/gym/envs/registration.py:17: PkgResourcesDeprecationWarning: Parameters to load are deprecated.  Call .resolve and .require separately.\n",
       "  result = entry_point.load(False)\n"
      ]
@@ -895,10 +895,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "if TRAIN:\n",
@@ -907,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -981,58 +979,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('mainDQN/advantage/bias', [4])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "atari_variables = tf.train.list_variables('trained/breakout/my_model-15845555')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[2019-02-24 18:45:32,025] From /Users/george/anaconda3/envs/py36/lib/python3.6/site-packages/tensorflow/python/util/tf_should_use.py:118: initialize_all_variables (from tensorflow.python.ops.variables) is deprecated and will be removed after 2017-03-02.\n",
-      "Instructions for updating:\n",
-      "Use `tf.global_variables_initializer` instead.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "trained_path = \"trained/breakout/\"\n",
     "save_file = \"my_model-15845555.meta\"\n",
     "sess = tf.Session()\n",
     "sess.run(tf.initialize_all_variables())\n",
     "saver = tf.train.import_meta_graph(trained_path+save_file)\n",
-    "saver.restore(sess,tf.train.latest_checkpoint(trained_path))\n",
-    "reinitializer = tf.initialize_variables()"
+    "saver.restore(sess,tf.train.latest_checkpoint(trained_path))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "conv1_vars = tf.get_collection(tf.GraphKeys.GLOBAL_VARIABLES, scope=\"mainDQN\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1040,7 +1010,32 @@
     "reset_main_optimizer_op = tf.variables_initializer(optimizer.variables())\n",
     "\n",
     "optimizer = TARGET_DQN.optimizer\n",
-    "reset_target_optimizer_op = tf.variables_initializer(optimizer.variables())"
+    "reset_target_optimizer_op = tf.variables_initializer(optimizer.variables())\n",
+    "\n",
+    "conv1_vars = [v for v in tf.get_collection(tf.GraphKeys.GLOBAL_VARIABLES) \n",
+    "              if \"conv1\" in v.name and \"Adam\" not in v.name]\n",
+    "reset_conv1_op = tf.variables_initializer(conv1_vars)\n",
+    "\n",
+    "conv2_vars = [v for v in tf.get_collection(tf.GraphKeys.GLOBAL_VARIABLES) \n",
+    "              if \"conv2\" in v.name and \"Adam\" not in v.name]\n",
+    "reset_conv2_op = tf.variables_initializer(conv2_vars)\n",
+    "\n",
+    "conv3_vars = [v for v in tf.get_collection(tf.GraphKeys.GLOBAL_VARIABLES) \n",
+    "              if \"conv3\" in v.name and \"Adam\" not in v.name]\n",
+    "reset_conv3_op = tf.variables_initializer(conv3_vars)\n",
+    "\n",
+    "conv4_vars = [v for v in tf.get_collection(tf.GraphKeys.GLOBAL_VARIABLES) \n",
+    "              if \"conv4\" in v.name and \"Adam\" not in v.name]\n",
+    "reset_conv4_op = tf.variables_initializer(conv4_vars)\n",
+    "\n",
+    "\n",
+    "advantage_vars = [v for v in tf.get_collection(tf.GraphKeys.GLOBAL_VARIABLES) \n",
+    "              if \"advantage\" in v.name and \"Adam\" not in v.name]\n",
+    "reset_advantage_op = tf.variables_initializer(advantage_vars)\n",
+    "\n",
+    "value_vars = [v for v in tf.get_collection(tf.GraphKeys.GLOBAL_VARIABLES) \n",
+    "              if \"value\" in v.name and \"Adam\" not in v.name]\n",
+    "reset_value_op = tf.variables_initializer(value_vars)"
    ]
   },
   {
@@ -1072,6 +1067,10 @@
     "            # Reset optimizer parameters\n",
     "            sess.run(reset_main_optimizer_op)\n",
     "            sess.run(reset_target_optimizer_op)\n",
+    "            \n",
+    "            # Reset value parameters\n",
+    "            sess.run(reset_value_op)\n",
+    "            sess.run(reset_advantage_op)\n",
     "        else:\n",
     "            sess.run(init)\n",
     "        \n",
