--- a/RetrainableDoubleDQN.ipynb
+++ b/RetrainableDoubleDQN.ipynb
@@ -138,68 +138,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Restoring the following variables: [<tf.Variable 'mainDQN/conv1/kernel:0' shape=(8, 8, 4, 32) dtype=float32_ref>, <tf.Variable 'mainDQN/conv2/kernel:0' shape=(4, 4, 32, 64) dtype=float32_ref>, <tf.Variable 'mainDQN/conv3/kernel:0' shape=(3, 3, 64, 64) dtype=float32_ref>, <tf.Variable 'mainDQN/conv4/kernel:0' shape=(7, 7, 64, 1024) dtype=float32_ref>, <tf.Variable 'mainDQN/value/bias:0' shape=(1,) dtype=float32_ref>, <tf.Variable 'mainDQN/value/kernel:0' shape=(512, 1) dtype=float32_ref>, <tf.Variable 'targetDQN/conv1/kernel:0' shape=(8, 8, 4, 32) dtype=float32_ref>, <tf.Variable 'targetDQN/conv2/kernel:0' shape=(4, 4, 32, 64) dtype=float32_ref>, <tf.Variable 'targetDQN/conv3/kernel:0' shape=(3, 3, 64, 64) dtype=float32_ref>, <tf.Variable 'targetDQN/conv4/kernel:0' shape=(7, 7, 64, 1024) dtype=float32_ref>, <tf.Variable 'targetDQN/value/bias:0' shape=(1,) dtype=float32_ref>, <tf.Variable 'targetDQN/value/kernel:0' shape=(512, 1) dtype=float32_ref>]\n",
-      "10 1853 1.4\n",
-      "20 3690 1.3\n",
-      "30 5372 1.1333333333333333\n",
-      "40 7367 1.25\n",
-      "50 9083 1.2\n",
-      "60 11028 1.2666666666666666\n",
-      "70 12730 1.2571428571428571\n",
-      "80 14547 1.225\n",
-      "90 16429 1.2444444444444445\n",
-      "100 18230 1.24\n",
-      "110 19989 1.22\n",
-      "120 21717 1.2\n",
-      "130 23564 1.25\n",
-      "140 25405 1.2\n",
-      "150 27236 1.22\n",
-      "160 28998 1.17\n",
-      "170 30783 1.15\n",
-      "180 32587 1.16\n",
-      "190 34677 1.2\n",
-      "200 36536 1.21\n",
-      "210 38260 1.18\n",
-      "220 40114 1.21\n",
-      "230 41921 1.18\n",
-      "240 43730 1.19\n",
-      "250 45492 1.19\n",
-      "260 47165 1.16\n",
-      "270 49143 1.22\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'PERFORMANCE_SUMMARIES' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-d2aa1692e7ec>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     12\u001b[0m                                \u001b[0mtrained_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrained_path\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m                                \u001b[0msave_file\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msave_file\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m                                model_name=\"transfer_learn_{}\".format(ENV_NAME))\n\u001b[0m",
-      "\u001b[0;32m~/cs234/transfer-learning/train.py\u001b[0m in \u001b[0;36mtransfer_initialized_train_dqn\u001b[0;34m(main_dqn, main_dqn_vars, param_summaries, target_dqn, target_dqn_vars, trained_path, save_file, model_name)\u001b[0m\n\u001b[1;32m    240\u001b[0m                     \u001b[0;31m# Scalar summaries for tensorboard\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    241\u001b[0m                     \u001b[0;32mif\u001b[0m \u001b[0mframe_number\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0mREPLAY_MEMORY_START_SIZE\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 242\u001b[0;31m                         summ = sess.run(PERFORMANCE_SUMMARIES, \n\u001b[0m\u001b[1;32m    243\u001b[0m                                         feed_dict={LOSS_PH:np.mean(loss_list), \n\u001b[1;32m    244\u001b[0m                                                    REWARD_PH:np.mean(rewards[-100:])})\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'PERFORMANCE_SUMMARIES' is not defined"
+      "Restoring the following variables: [<tf.Variable 'mainDQN/conv1/kernel:0' shape=(8, 8, 4, 32) dtype=float32_ref>, <tf.Variable 'mainDQN/conv2/kernel:0' shape=(4, 4, 32, 64) dtype=float32_ref>, <tf.Variable 'mainDQN/conv3/kernel:0' shape=(3, 3, 64, 64) dtype=float32_ref>, <tf.Variable 'mainDQN/conv4/kernel:0' shape=(7, 7, 64, 1024) dtype=float32_ref>, <tf.Variable 'targetDQN/conv1/kernel:0' shape=(8, 8, 4, 32) dtype=float32_ref>, <tf.Variable 'targetDQN/conv2/kernel:0' shape=(4, 4, 32, 64) dtype=float32_ref>, <tf.Variable 'targetDQN/conv3/kernel:0' shape=(3, 3, 64, 64) dtype=float32_ref>, <tf.Variable 'targetDQN/conv4/kernel:0' shape=(7, 7, 64, 1024) dtype=float32_ref>]\n",
+      "10 2202 2.2\n",
+      "20 4206 1.85\n",
+      "30 6012 1.7\n",
+      "40 7676 1.5\n",
+      "50 9923 1.68\n",
+      "60 11992 1.7\n",
+      "70 13908 1.6571428571428573\n",
+      "80 15697 1.5875\n",
+      "90 17498 1.5333333333333334\n",
+      "100 19438 1.54\n",
+      "110 21265 1.45\n",
+      "120 22952 1.39\n",
+      "130 24590 1.31\n",
+      "140 26367 1.34\n",
+      "150 28244 1.24\n",
+      "160 29937 1.15\n",
+      "170 31716 1.11\n",
+      "180 33456 1.1\n",
+      "190 35150 1.08\n",
+      "200 36845 1.0\n",
+      "210 38614 0.98\n",
+      "220 40402 1.0\n",
+      "230 42227 1.06\n",
+      "240 43776 0.99\n",
+      "250 45944 1.07\n",
+      "260 47718 1.09\n",
+      "270 49589 1.13\n"
      ]
     }
    ],
    "source": [
     "if TRAIN_TRANSFER:\n",
     "    if ENV_NAME == 'PongDeterministic-v4':\n",
+    "        # Swap paths\n",
     "        trained_path = \"trained/breakout/\"\n",
     "        save_file = \"my_model-15845555.meta\"\n",
     "    \n",
     "    elif ENV_NAME == 'BreakoutDeterministic-v4':\n",
+    "        # Swap paths\n",
     "        trained_path = \"trained/pong/\"\n",
     "        save_file = \"my_model-3217770.meta\"\n",
-    "    transfer_initialized_train_dqn(MAIN_DQN,MAIN_DQN_VARS, PARAM_SUMMARIES, \n",
+    "    # Only reset conv layers\n",
+    "    transfer_initialized_train_dqn(MAIN_DQN,[v for v in MAIN_DQN_VARS if \"conv\" in v.name], PARAM_SUMMARIES, \n",
     "                               target_dqn = TARGET_DQN, \n",
-    "                               target_dqn_vars = TARGET_DQN_VARS,\n",
+    "                               target_dqn_vars = [v for v in TARGET_DQN_VARS if \"conv\" in v.name],\n",
     "                               trained_path = trained_path, \n",
     "                               save_file = save_file, \n",
     "                               model_name=\"transfer_learn_{}\".format(ENV_NAME))"
