--- a/RetrainableSingleDQN.ipynb
+++ b/RetrainableSingleDQN.ipynb
@@ -39,7 +39,6 @@
     "from atari_helper import *\n",
     "from replay_memory import *\n",
     "from dqn import *\n",
-    "from train import *\n",
     "\n",
     "# MODIFY ENVIRONMENT TO CHANGE YOUR OUTPUTS\n",
     "from environment import *\n",
@@ -92,6 +91,303 @@
     "            MAIN_DQN_KERNEL = tf.summary.histogram(Id, tf.reshape(MAIN_DQN_VARS[i], shape=[-1]))\n",
     "        ALL_PARAM_SUMMARIES.extend([MAIN_DQN_KERNEL])\n",
     "PARAM_SUMMARIES = tf.summary.merge(ALL_PARAM_SUMMARIES)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_dqn(main_dqn,  main_dqn_vars, param_summaries, target_dqn=None, target_dqn_vars=[], trained_path = None, save_file = None, model_name=\"my_model\"):\n",
+    "    # Trained path: The path (if provided) to look for the saved file from. EG: \"trained/pong/\"\n",
+    "    # Save_file: The path (if provided) to save tf outputs to\n",
+    "    # The model name\n",
+    "    \"\"\"Contains the training and evaluation loops\"\"\"\n",
+    "    init = tf.global_variables_initializer()\n",
+    "    saver = tf.train.Saver()  \n",
+    "    my_replay_memory = ReplayMemory(size=MEMORY_SIZE, batch_size=BS)   # (★)\n",
+    "    if (target_dqn != None):\n",
+    "        network_updater = TargetNetworkUpdater(main_dqn_vars, target_dqn_vars)\n",
+    "    action_getter = ActionGetter(atari.env.action_space.n, \n",
+    "                                 replay_memory_start_size=REPLAY_MEMORY_START_SIZE, \n",
+    "                                 max_frames=MAX_FRAMES)\n",
+    "\n",
+    "    with tf.Session() as sess:\n",
+    "        \n",
+    "        if trained_path != None:\n",
+    "            saver = tf.train.import_meta_graph(trained_path+save_file)\n",
+    "            saver.restore(sess,tf.train.latest_checkpoint(trained_path))\n",
+    "        else:\n",
+    "            sess.run(init)\n",
+    "        \n",
+    "        frame_number = 0\n",
+    "        rewards = []\n",
+    "        loss_list = []\n",
+    "        \n",
+    "        while frame_number < MAX_FRAMES:\n",
+    "            \n",
+    "            ########################\n",
+    "            ####### Training #######\n",
+    "            ########################\n",
+    "            epoch_frame = 0\n",
+    "            while epoch_frame < EVAL_FREQUENCY:\n",
+    "                terminal_life_lost = atari.reset(sess)\n",
+    "                episode_reward_sum = 0\n",
+    "                for _ in range(MAX_EPISODE_LENGTH):\n",
+    "                    # (4★)\n",
+    "                    action = action_getter.get_action(sess, frame_number, atari.state, main_dqn)   \n",
+    "                    # (5★)\n",
+    "                    processed_new_frame, reward, terminal, terminal_life_lost, _ = atari.step(sess, action)  \n",
+    "                    frame_number += 1\n",
+    "                    epoch_frame += 1\n",
+    "                    episode_reward_sum += reward\n",
+    "                    \n",
+    "                    # (7★) Store transition in the replay memory\n",
+    "                    my_replay_memory.add_experience(action=action, \n",
+    "                                                    frame=processed_new_frame[:, :, 0],\n",
+    "                                                    reward=reward, \n",
+    "                                                    terminal=terminal_life_lost)   \n",
+    "                    \n",
+    "                    if frame_number % UPDATE_FREQ == 0 and frame_number > REPLAY_MEMORY_START_SIZE:\n",
+    "                        loss = learn(sess, my_replay_memory, main_dqn, target_dqn,\n",
+    "                                     BS, gamma = DISCOUNT_FACTOR) # (8★)\n",
+    "                        loss_list.append(loss)\n",
+    "                    if target_dqn != None and frame_number % NETW_UPDATE_FREQ == 0 and frame_number > REPLAY_MEMORY_START_SIZE:\n",
+    "                        network_updater.update_networks(sess) # (9★)\n",
+    "                    \n",
+    "                    if terminal:\n",
+    "                        terminal = False\n",
+    "                        break\n",
+    "\n",
+    "                rewards.append(episode_reward_sum)\n",
+    "                \n",
+    "                # Output the progress:\n",
+    "                if len(rewards) % 10 == 0:\n",
+    "                    # Scalar summaries for tensorboard\n",
+    "                    if frame_number > REPLAY_MEMORY_START_SIZE:\n",
+    "                        summ = sess.run(PERFORMANCE_SUMMARIES, \n",
+    "                                        feed_dict={LOSS_PH:np.mean(loss_list), \n",
+    "                                                   REWARD_PH:np.mean(rewards[-100:])})\n",
+    "                        \n",
+    "                        SUMM_WRITER.add_summary(summ, frame_number)\n",
+    "                        loss_list = []\n",
+    "                    # Histogramm summaries for tensorboard\n",
+    "                    summ_param = sess.run(param_summaries)\n",
+    "                    SUMM_WRITER.add_summary(summ_param, frame_number)\n",
+    "                    \n",
+    "                    print(len(rewards), frame_number, np.mean(rewards[-100:]))\n",
+    "                    with open('rewards.dat', 'a') as reward_file:\n",
+    "                        print(len(rewards), frame_number, \n",
+    "                              np.mean(rewards[-100:]), file=reward_file)\n",
+    "            \n",
+    "            ########################\n",
+    "            ###### Evaluation ######\n",
+    "            ########################\n",
+    "            terminal = True\n",
+    "            gif = True\n",
+    "            frames_for_gif = []\n",
+    "            eval_rewards = []\n",
+    "            evaluate_frame_number = 0\n",
+    "            \n",
+    "            for _ in range(EVAL_STEPS):\n",
+    "                if terminal:\n",
+    "                    terminal_life_lost = atari.reset(sess, evaluation=True)\n",
+    "                    episode_reward_sum = 0\n",
+    "                    terminal = False\n",
+    "               \n",
+    "                # Fire (action 1), when a life was lost or the game just started, \n",
+    "                # so that the agent does not stand around doing nothing. When playing \n",
+    "                # with other environments, you might want to change this...\n",
+    "                action = 1 if terminal_life_lost else action_getter.get_action(sess, frame_number,\n",
+    "                                                                               atari.state, \n",
+    "                                                                               main_dqn,\n",
+    "                                                                               evaluation=True)\n",
+    "                processed_new_frame, reward, terminal, terminal_life_lost, new_frame = atari.step(sess, action)\n",
+    "                evaluate_frame_number += 1\n",
+    "                episode_reward_sum += reward\n",
+    "\n",
+    "                if gif: \n",
+    "                    frames_for_gif.append(new_frame)\n",
+    "                if terminal:\n",
+    "                    eval_rewards.append(episode_reward_sum)\n",
+    "                    gif = False # Save only the first game of the evaluation as a gif\n",
+    "                     \n",
+    "            print(\"Evaluation score:\\n\", np.mean(eval_rewards))       \n",
+    "            try:\n",
+    "                generate_gif(frame_number, frames_for_gif, eval_rewards[0], PATH)\n",
+    "            except IndexError:\n",
+    "                print(\"No evaluation game finished\")\n",
+    "            \n",
+    "            #Save the network parameters\n",
+    "            saver.save(sess, PATH+'/'+model_name, global_step=frame_number)\n",
+    "            frames_for_gif = []\n",
+    "            \n",
+    "            # Show the evaluation score in tensorboard\n",
+    "            summ = sess.run(EVAL_SCORE_SUMMARY, feed_dict={EVAL_SCORE_PH:np.mean(eval_rewards)})\n",
+    "            SUMM_WRITER.add_summary(summ, frame_number)\n",
+    "            with open('rewardsEval.dat', 'a') as eval_reward_file:\n",
+    "                print(frame_number, np.mean(eval_rewards), file=eval_reward_file)\n",
+    "\n",
+    "\n",
+    "# Code from https://gist.github.com/iganichev/d2d8a0b1abc6b15d4a07de83171163d4\n",
+    "# Load variables in if they are relevant\n",
+    "# Currently transfers conv layers\n",
+    "# vars_list is a set of tf.trainable_variables\n",
+    "def optimistic_restore(session, save_file, vars_list):\n",
+    "    reader = tf.train.NewCheckpointReader(save_file)\n",
+    "    saved_shapes = reader.get_variable_to_shape_map()\n",
+    "    var_names = sorted([(var.name, var.name.split(':')[0]) for\n",
+    "                      var in vars_list\n",
+    "                      if var.name.split(':')[0] in saved_shapes])\n",
+    "    restore_vars = []\n",
+    "    name2var = dict(zip(map(lambda x: x.name.split(':')[0],\n",
+    "                          tf.global_variables()),\n",
+    "                      tf.global_variables()))\n",
+    "    with tf.variable_scope('', reuse=True):\n",
+    "        for var_name, saved_var_name in var_names:\n",
+    "            curr_var = name2var[saved_var_name]\n",
+    "            var_shape = curr_var.get_shape().as_list()\n",
+    "            if var_shape == saved_shapes[saved_var_name]:\n",
+    "                restore_vars.append(curr_var)\n",
+    "                \n",
+    "    print(\"Restoring the following variables: {}\".format(restore_vars))\n",
+    "    saver = tf.train.Saver(restore_vars)\n",
+    "    saver.restore(session, save_file)\n",
+    "\n",
+    "# Train on GPU if a trained_path is provided\n",
+    "def transfer_initialized_train_dqn(main_dqn,  main_dqn_vars, param_summaries, target_dqn=None, target_dqn_vars=[], trained_path = None, save_file = None, model_name=\"my_model\"):\n",
+    "    # Trained path: The path (if provided) to look for the saved file from. EG: \"trained/pong/\"\n",
+    "    # Save_file: The path (if provided) to save tf outputs to\n",
+    "    # The model name\n",
+    "    \"\"\"Contains the training and evaluation loops\"\"\"\n",
+    "    init = tf.global_variables_initializer()\n",
+    "    saver = tf.train.Saver()  \n",
+    "    my_replay_memory = ReplayMemory(size=MEMORY_SIZE, batch_size=BS)   # (★)\n",
+    "    if (target_dqn != None):\n",
+    "        network_updater = TargetNetworkUpdater(main_dqn_vars, target_dqn_vars)\n",
+    "    action_getter = ActionGetter(atari.env.action_space.n, \n",
+    "                                 replay_memory_start_size=REPLAY_MEMORY_START_SIZE, \n",
+    "                                 max_frames=MAX_FRAMES)\n",
+    "\n",
+    "    with tf.Session() as sess:\n",
+    "        \n",
+    "        if trained_path != None:\n",
+    "            # Init everything to start off unitialized weights\n",
+    "            sess.run(init)\n",
+    "            # Load saver for weights that can be transferred\n",
+    "            # saver = tf.train.import_meta_graph(trained_path+save_file)\n",
+    "            optimistic_restore(sess, tf.train.latest_checkpoint(trained_path), main_dqn_vars+target_dqn_vars)\n",
+    "        \n",
+    "        else:\n",
+    "            sess.run(init)\n",
+    "        \n",
+    "        frame_number = 0\n",
+    "        rewards = []\n",
+    "        loss_list = []\n",
+    "        \n",
+    "        while frame_number < MAX_FRAMES:\n",
+    "            ########################\n",
+    "            ####### Training #######\n",
+    "            ########################\n",
+    "            epoch_frame = 0\n",
+    "            while epoch_frame < EVAL_FREQUENCY:\n",
+    "                terminal_life_lost = atari.reset(sess)\n",
+    "                episode_reward_sum = 0\n",
+    "                for _ in range(MAX_EPISODE_LENGTH):\n",
+    "                    # (4★)\n",
+    "                    action = action_getter.get_action(sess, frame_number, atari.state, main_dqn)   \n",
+    "                    # (5★)\n",
+    "                    processed_new_frame, reward, terminal, terminal_life_lost, _ = atari.step(sess, action)  \n",
+    "                    frame_number += 1\n",
+    "                    epoch_frame += 1\n",
+    "                    episode_reward_sum += reward\n",
+    "                    \n",
+    "                    # (7★) Store transition in the replay memory\n",
+    "                    my_replay_memory.add_experience(action=action, \n",
+    "                                                    frame=processed_new_frame[:, :, 0],\n",
+    "                                                    reward=reward, \n",
+    "                                                    terminal=terminal_life_lost)   \n",
+    "                    \n",
+    "                    if frame_number % UPDATE_FREQ == 0 and frame_number > REPLAY_MEMORY_START_SIZE:\n",
+    "                        loss = learn_double_dqn(sess, my_replay_memory, main_dqn, target_dqn,\n",
+    "                                     BS, gamma = DISCOUNT_FACTOR) # (8★)\n",
+    "                        loss_list.append(loss)\n",
+    "                    if target_dqn != None and frame_number % NETW_UPDATE_FREQ == 0 and frame_number > REPLAY_MEMORY_START_SIZE:\n",
+    "                        network_updater.update_networks(sess) # (9★)\n",
+    "                    \n",
+    "                    if terminal:\n",
+    "                        terminal = False\n",
+    "                        break\n",
+    "\n",
+    "                rewards.append(episode_reward_sum)\n",
+    "                \n",
+    "                # Output the progress:\n",
+    "                if len(rewards) % 10 == 0:\n",
+    "                    # Scalar summaries for tensorboard\n",
+    "                    if frame_number > REPLAY_MEMORY_START_SIZE:\n",
+    "                        summ = sess.run(param_summaries, \n",
+    "                                        feed_dict={LOSS_PH:np.mean(loss_list), \n",
+    "                                                   REWARD_PH:np.mean(rewards[-100:])})\n",
+    "                        \n",
+    "                        SUMM_WRITER.add_summary(summ, frame_number)\n",
+    "                        loss_list = []\n",
+    "                    # Histogramm summaries for tensorboard\n",
+    "                    summ_param = sess.run(param_summaries)\n",
+    "                    SUMM_WRITER.add_summary(summ_param, frame_number)\n",
+    "                    \n",
+    "                    print(len(rewards), frame_number, np.mean(rewards[-100:]))\n",
+    "                    with open('rewards.dat', 'a') as reward_file:\n",
+    "                        print(len(rewards), frame_number, \n",
+    "                              np.mean(rewards[-100:]), file=reward_file)\n",
+    "            \n",
+    "            ########################\n",
+    "            ###### Evaluation ######\n",
+    "            ########################\n",
+    "            terminal = True\n",
+    "            gif = True\n",
+    "            frames_for_gif = []\n",
+    "            eval_rewards = []\n",
+    "            evaluate_frame_number = 0\n",
+    "            \n",
+    "            for _ in range(EVAL_STEPS):\n",
+    "                if terminal:\n",
+    "                    terminal_life_lost = atari.reset(sess, evaluation=True)\n",
+    "                    episode_reward_sum = 0\n",
+    "                    terminal = False\n",
+    "               \n",
+    "                # Fire (action 1), when a life was lost or the game just started, \n",
+    "                # so that the agent does not stand around doing nothing. When playing \n",
+    "                # with other environments, you might want to change this...\n",
+    "                action = 1 if terminal_life_lost else action_getter.get_action(sess, frame_number,\n",
+    "                                                                               atari.state, \n",
+    "                                                                               main_dqn,\n",
+    "                                                                               evaluation=True)\n",
+    "                processed_new_frame, reward, terminal, terminal_life_lost, new_frame = atari.step(sess, action)\n",
+    "                evaluate_frame_number += 1\n",
+    "                episode_reward_sum += reward\n",
+    "\n",
+    "                if gif: \n",
+    "                    frames_for_gif.append(new_frame)\n",
+    "                if terminal:\n",
+    "                    eval_rewards.append(episode_reward_sum)\n",
+    "                    gif = False # Save only the first game of the evaluation as a gif\n",
+    "                     \n",
+    "            print(\"Evaluation score:\\n\", np.mean(eval_rewards))       \n",
+    "            try:\n",
+    "                generate_gif(frame_number, frames_for_gif, eval_rewards[0], PATH)\n",
+    "            except IndexError:\n",
+    "                print(\"No evaluation game finished\")\n",
+    "            \n",
+    "            #Save the network parameters\n",
+    "            saver.save(sess, PATH+'/'+model_name, global_step=frame_number)\n",
+    "            frames_for_gif = []\n",
+    "            \n",
+    "            # Show the evaluation score in tensorboard\n",
+    "            summ = sess.run(EVAL_SCORE_SUMMARY, feed_dict={EVAL_SCORE_PH:np.mean(eval_rewards)})\n",
+    "            SUMM_WRITER.add_summary(summ, frame_number)\n",
+    "            with open('rewardsEval.dat', 'a') as eval_reward_file:\n",
+    "                print(frame_number, np.mean(eval_rewards), file=eval_reward_file)"
    ]
   },
   {
