Update variables in DQN.ipynb

--- a/DQN.ipynb
+++ b/DQN.ipynb
@@ -2,15 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "TRAIN = False\n",
-    "TEST = True\n",
-    "\n",
+    "TEST = False\n",
+    "TRAIN_TRANSFER = True\n",
     "ENV_NAME = 'BreakoutDeterministic-v4'\n",
     "#ENV_NAME = 'PongDeterministic-v4'  \n",
     "# You can increase the learning rate to 0.00025 in Pong for quicker results"
@@ -18,10 +16,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -39,10 +35,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class ProcessFrame:\n",
@@ -75,10 +69,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class DQN:\n",
@@ -162,10 +154,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class ActionGetter:\n",
@@ -230,10 +220,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class ReplayMemory:\n",
@@ -326,10 +314,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def learn(session, replay_memory, main_dqn, target_dqn, batch_size, gamma):\n",
@@ -370,10 +356,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class TargetNetworkUpdater:\n",
@@ -408,10 +392,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def generate_gif(frame_number, frames_for_gif, reward, path):\n",
@@ -432,10 +414,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Atari:\n",
@@ -493,11 +473,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[2019-03-12 16:11:45,002] Making new env: BreakoutDeterministic-v4\n",
+      "/Users/george/anaconda3/envs/py36/lib/python3.6/site-packages/gym/envs/registration.py:17: PkgResourcesDeprecationWarning: Parameters to load are deprecated.  Call .resolve and .require separately.\n",
+      "  result = entry_point.load(False)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The environment has the following 4 actions: ['NOOP', 'FIRE', 'RIGHT', 'LEFT']\n"
+     ]
+    }
+   ],
    "source": [
     "tf.reset_default_graph()\n",
     "\n",
@@ -543,10 +538,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# main DQN and target DQN networks:\n",
@@ -564,10 +557,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "LAYER_IDS = [\"conv1\", \"conv2\", \"conv3\", \"conv4\", \"denseAdvantage\", \n",
@@ -596,10 +587,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def train():\n",
@@ -658,8 +647,7 @@
     "                if len(rewards) % 10 == 0:\n",
     "                    # Scalar summaries for tensorboard\n",
     "                    if frame_number > REPLAY_MEMORY_START_SIZE:\n",
-    "                        summ = sess.run(PERFORMANCE_SUMMARIES, \n",
-    "                                        feed_dict={LOSS_PH:np.mean(loss_list), \n",
+    "                        summ = sess.run(PERFORMANCE_SUMMARIES, feed_dict={LOSS_PH:np.mean(loss_list), \n",
     "                                                   REWARD_PH:np.mean(rewards[-100:])})\n",
     "                        \n",
     "                        SUMM_WRITER.add_summary(summ, frame_number)\n",
@@ -724,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -754,7 +742,7 @@
     "    saver.restore(session, save_file)\n",
     "\n",
     "# Train on GPU if a trained_path is provided\n",
-    "def transfer_initialized_train_dqntrained_path = None, save_file = None, model_name=\"my_model\"):\n",
+    "def transfer_initialized_train_dqn(trained_path = None, save_file = None, model_name=\"my_model\"):\n",
     "    # Trained path: The path (if provided) to look for the saved file from. EG: \"trained/pong/\"\n",
     "    # Save_file: The path (if provided) to save tf outputs to\n",
     "    # The model name\n",
@@ -807,8 +795,7 @@
     "                                                    terminal=terminal_life_lost)   \n",
     "                    \n",
     "                    if frame_number % UPDATE_FREQ == 0 and frame_number > REPLAY_MEMORY_START_SIZE:\n",
-    "                        loss = learn_double_dqn(sess, my_replay_memory, MAIN_DQN, TARGET_DQN,\n",
-    "                                     BS, gamma = DISCOUNT_FACTOR) # (8★)\n",
+    "                        loss = learn(sess, my_replay_memory, MAIN_DQN, TARGET_DQN, BS, gamma = DISCOUNT_FACTOR) # (8★)\n",
     "                        loss_list.append(loss)\n",
     "                    if frame_number % NETW_UPDATE_FREQ == 0 and frame_number > REPLAY_MEMORY_START_SIZE:\n",
     "                        network_updater.update_networks(sess) # (9★)\n",
@@ -823,8 +810,7 @@
     "                if len(rewards) % 10 == 0:\n",
     "                    # Scalar summaries for tensorboard\n",
     "                    if frame_number > REPLAY_MEMORY_START_SIZE:\n",
-    "                        summ = sess.run(PERFORMANCE_SUMMARIES, \n",
-    "                                        feed_dict={LOSS_PH:np.mean(loss_list), \n",
+    "                        summ = sess.run(PERFORMANCE_SUMMARIES, feed_dict={LOSS_PH:np.mean(loss_list), \n",
     "                                                   REWARD_PH:np.mean(rewards[-100:])})\n",
     "                        \n",
     "                        SUMM_WRITER.add_summary(summ, frame_number)\n",
@@ -835,8 +821,7 @@
     "                    \n",
     "                    print(len(rewards), frame_number, np.mean(rewards[-100:]))\n",
     "                    with open('rewards.dat', 'a') as reward_file:\n",
-    "                        print(len(rewards), frame_number, \n",
-    "                              np.mean(rewards[-100:]), file=reward_file)\n",
+    "                        print(len(rewards), frame_number, np.mean(rewards[-100:]), file=reward_file)\n",
     "            \n",
     "            ########################\n",
     "            ###### Evaluation ######\n",
@@ -889,10 +874,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 27,
+   "metadata": {},
    "outputs": [],
    "source": [
     "if TRAIN:\n",
@@ -901,10 +884,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 28,
+   "metadata": {},
    "outputs": [],
    "source": [
     "if TEST:\n",
@@ -951,8 +932,47 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Restoring the following variables: [<tf.Variable 'mainDQN/conv1/kernel:0' shape=(8, 8, 4, 32) dtype=float32_ref>, <tf.Variable 'mainDQN/conv2/kernel:0' shape=(4, 4, 32, 64) dtype=float32_ref>, <tf.Variable 'mainDQN/conv3/kernel:0' shape=(3, 3, 64, 64) dtype=float32_ref>, <tf.Variable 'mainDQN/conv4/kernel:0' shape=(7, 7, 64, 1024) dtype=float32_ref>, <tf.Variable 'targetDQN/conv1/kernel:0' shape=(8, 8, 4, 32) dtype=float32_ref>, <tf.Variable 'targetDQN/conv2/kernel:0' shape=(4, 4, 32, 64) dtype=float32_ref>, <tf.Variable 'targetDQN/conv3/kernel:0' shape=(3, 3, 64, 64) dtype=float32_ref>, <tf.Variable 'targetDQN/conv4/kernel:0' shape=(7, 7, 64, 1024) dtype=float32_ref>]\n",
+      "10 1606 0.7\n",
+      "20 3259 0.7\n",
+      "30 5053 0.8666666666666667\n",
+      "40 6806 0.925\n",
+      "50 8542 0.92\n",
+      "60 10151 0.8833333333333333\n",
+      "70 11806 0.9\n",
+      "80 13595 0.925\n",
+      "90 15308 0.9333333333333333\n",
+      "100 17111 0.95\n",
+      "110 19052 1.04\n",
+      "120 20685 1.04\n",
+      "130 22697 1.08\n",
+      "140 24480 1.09\n",
+      "150 26337 1.14\n",
+      "160 28172 1.21\n",
+      "170 30202 1.27\n",
+      "180 31973 1.25\n",
+      "190 33539 1.21\n",
+      "200 35108 1.17\n",
+      "210 36993 1.15\n",
+      "220 38524 1.13\n",
+      "230 40261 1.06\n",
+      "240 41940 1.03\n",
+      "250 43652 0.98\n",
+      "260 45479 0.97\n",
+      "270 47135 0.88\n",
+      "280 48822 0.87\n",
+      "290 50507 0.9\n"
+     ]
+    }
+   ],
    "source": [
     "if TRAIN_TRANSFER:\n",
     "    if ENV_NAME == 'PongDeterministic-v4':\n",
@@ -969,6 +989,13 @@
     "                               save_file = save_file, \n",
     "                               model_name=\"transfer_learn_{}\".format(ENV_NAME))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
