Add dqn python code

--- a/DQN.ipynb
+++ b/DQN.ipynb
@@ -473,16 +473,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2019-03-12 16:11:45,002] Making new env: BreakoutDeterministic-v4\n",
-      "/Users/george/anaconda3/envs/py36/lib/python3.6/site-packages/gym/envs/registration.py:17: PkgResourcesDeprecationWarning: Parameters to load are deprecated.  Call .resolve and .require separately.\n",
-      "  result = entry_point.load(False)\n"
+      "[2019-03-12 16:30:25,196] Making new env: BreakoutDeterministic-v4\n"
      ]
     },
     {
@@ -519,7 +517,7 @@
     "                                 # (1,1,512). This is slightly different from the original \n",
     "                                 # implementation but tests I did with the environment Pong \n",
     "                                 # have shown that this way the score increases more quickly\n",
-    "LEARNING_RATE = 0.00001          # Set to 0.00025 in Pong for quicker results. \n",
+    "LEARNING_RATE = 0.00010          # Set to 0.00025 in Pong for quicker results. \n",
     "                                 # Hessel et al. 2017 used 0.0000625\n",
     "BS = 32                          # Batch size\n",
     "\n",
@@ -538,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -712,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -758,7 +756,7 @@
     "    with tf.Session() as sess:\n",
     "        \n",
     "        if trained_path != None:\n",
-    "            # Init everything to start off unitialized weights\n",
+    "            # Init everything to start off unintialized weights\n",
     "            sess.run(init)\n",
     "            # Load saver for weights that can be transferred\n",
     "            # saver = tf.train.import_meta_graph(trained_path+save_file)\n",
@@ -874,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -884,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,35 +939,44 @@
      "output_type": "stream",
      "text": [
       "Restoring the following variables: [<tf.Variable 'mainDQN/conv1/kernel:0' shape=(8, 8, 4, 32) dtype=float32_ref>, <tf.Variable 'mainDQN/conv2/kernel:0' shape=(4, 4, 32, 64) dtype=float32_ref>, <tf.Variable 'mainDQN/conv3/kernel:0' shape=(3, 3, 64, 64) dtype=float32_ref>, <tf.Variable 'mainDQN/conv4/kernel:0' shape=(7, 7, 64, 1024) dtype=float32_ref>, <tf.Variable 'targetDQN/conv1/kernel:0' shape=(8, 8, 4, 32) dtype=float32_ref>, <tf.Variable 'targetDQN/conv2/kernel:0' shape=(4, 4, 32, 64) dtype=float32_ref>, <tf.Variable 'targetDQN/conv3/kernel:0' shape=(3, 3, 64, 64) dtype=float32_ref>, <tf.Variable 'targetDQN/conv4/kernel:0' shape=(7, 7, 64, 1024) dtype=float32_ref>]\n",
-      "10 1606 0.7\n",
-      "20 3259 0.7\n",
-      "30 5053 0.8666666666666667\n",
-      "40 6806 0.925\n",
-      "50 8542 0.92\n",
-      "60 10151 0.8833333333333333\n",
-      "70 11806 0.9\n",
-      "80 13595 0.925\n",
-      "90 15308 0.9333333333333333\n",
-      "100 17111 0.95\n",
-      "110 19052 1.04\n",
-      "120 20685 1.04\n",
-      "130 22697 1.08\n",
-      "140 24480 1.09\n",
-      "150 26337 1.14\n",
-      "160 28172 1.21\n",
-      "170 30202 1.27\n",
-      "180 31973 1.25\n",
-      "190 33539 1.21\n",
-      "200 35108 1.17\n",
-      "210 36993 1.15\n",
-      "220 38524 1.13\n",
-      "230 40261 1.06\n",
-      "240 41940 1.03\n",
-      "250 43652 0.98\n",
-      "260 45479 0.97\n",
-      "270 47135 0.88\n",
-      "280 48822 0.87\n",
-      "290 50507 0.9\n"
+      "10 1948 1.6\n",
+      "20 3904 1.5\n",
+      "30 5278 1.0333333333333334\n",
+      "40 7010 1.025\n",
+      "50 8927 1.1\n",
+      "60 10594 1.05\n",
+      "70 12576 1.1142857142857143\n",
+      "80 14549 1.1875\n",
+      "90 16313 1.1777777777777778\n",
+      "100 18032 1.16\n",
+      "110 19868 1.12\n",
+      "120 21762 1.12\n",
+      "130 23608 1.24\n",
+      "140 25499 1.29\n",
+      "150 27347 1.27\n",
+      "160 29196 1.32\n",
+      "170 31038 1.3\n",
+      "180 32791 1.26\n",
+      "190 34797 1.32\n",
+      "200 36353 1.28\n",
+      "210 38052 1.24\n",
+      "220 39736 1.19\n",
+      "230 41684 1.22\n",
+      "240 43707 1.24\n",
+      "250 45362 1.21\n",
+      "260 46872 1.12\n",
+      "270 48654 1.1\n",
+      "280 50415 1.09\n",
+      "290 52433 1.08\n",
+      "300 54189 1.13\n",
+      "310 55786 1.12\n",
+      "320 57619 1.16\n",
+      "330 59554 1.16\n",
+      "340 61437 1.11\n",
+      "350 63108 1.1\n",
+      "360 64789 1.16\n",
+      "370 66581 1.16\n",
+      "380 68263 1.12\n"
      ]
     }
    ],
